--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,8 +6,11 @@
 name: Publish Docker image
 
 on:
+  workflow_dispatch:
   push:
     branches: [ master ]
+  schedule:
+    - cron:  '18 7 8 * *'
 
 jobs:
   push_to_registries:
